--- a/author.html
+++ b/author.html
@@ -312,9 +312,6 @@
                             <h2>Ubisoft</h2>
                         </div>
                     </div>
-                    <div class="author__top__head__right">
-                        <div class="author__top__head__right__count txt">20 Игр</div>
-                    </div>
                 </div>
                 <div class="author__top__about txt">
                     <h3>Титулованная серия впервые на ПК</h3>
@@ -332,6 +329,7 @@
                 <div class="switch__head">
                     <div class="switch__head__point switch__head__point_active" data-title="all" id="switch_point-all" onclick="switch_section('all', 'author__games__grid_active')">
 						<div class="switch__head__point__text txt">Все игры</div>
+						<span class="txt"></span>
 					</div>
                     <div class="switch__head__point" data-title="new" id="switch_point-new" onclick="switch_section('new', 'author__games__grid_active')">
 						<div class="switch__head__point__text txt">Новинки</div>
