--- a/game.html
+++ b/game.html
@@ -443,7 +443,7 @@
 										</svg>
 									</button>
 								</div>
-								<div class="mainInfo__banner__interface__bottom__scroll" id="interface_scroll_horizontal">
+								<div class="mainInfo__banner__interface__bottom__scroll" id="interface_scroll_horizontal" data-scrollType="def">
 									<div class="mainInfo__banner__interface__bottom__medialist" id="game_medialist">
 										<div class="mainInfo__banner__interface__bottom__medialist__media mainInfo__banner__interface__bottom__medialist__media_active" id="media_block-1" onclick="change_media(false, '1')">
 											<img src="img/banners/1.jpg" alt="">
@@ -510,8 +510,8 @@
 						</div>
 					</div>
 					<div class="mainInfo__info__bottom">
-						<div class="mainInfo__info__category" id="game_categories">
-						
+						<div class="mainInfo__info__category" id="game_categories" data-scrollType="shadow">
+							
 						</div>
 						<div class="mainInfo__info__about">
 							<div class="mainInfo__info__about__point txt">
