--- a/game.html
+++ b/game.html
@@ -445,24 +445,6 @@
 								</div>
 								<div class="mainInfo__banner__interface__bottom__scroll" id="interface_scroll_horizontal" data-scrollType="def">
 									<div class="mainInfo__banner__interface__bottom__medialist" id="game_medialist">
-										<div class="mainInfo__banner__interface__bottom__medialist__media mainInfo__banner__interface__bottom__medialist__media_active" id="media_block-1" onclick="change_media(false, '1')">
-											<img src="img/banners/1.jpg" alt="">
-										</div>
-										<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-10" onclick="change_media(false, '10')">
-											<img src="img/banners/10.jpg" alt="">
-										</div>
-										<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-3" onclick="change_media(false, '3')">
-											<img src="img/banners/3.jpg" alt="">
-										</div>
-										<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-4" onclick="change_media(false, '4')">
-											<img src="img/banners/4.jpg" alt="">
-										</div>
-										<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-5" onclick="change_media(false, '5')">
-											<img src="img/banners/5.jpg" alt="">
-										</div>
-										<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-52nahuy" onclick="change_media(false, '52nahuy')">
-											<img src="img/banners/52nahuy.jpg" alt="">
-										</div>
 									</div>
 								</div>
 							</div>
@@ -494,7 +476,13 @@
 						<div class="mainInfo__interaction__right">
 							<div class="mainInfo__interaction__prices txt">
 								<div class="mainInfo__interaction__prices__old">1570₽</div>
-								<div class="mainInfo__interaction__prices__new"><span id="region_price">Ru</span>1235₽</div>
+								<div class="mainInfo__interaction__prices__new">
+									<span id="region_price">
+										<span>?</span>Ru
+										<div class="txt">Регион аккаунта, на который покупается игра</div>
+									</span>
+									1235₽
+								</div>
 							</div>
 							<div class="mainInfo__interaction__discount txt">52%</div>
 						</div>
@@ -705,6 +693,6 @@
 	<script type="text/javascript" src="scripts/video_player.js"></script>
 	<script type="text/javascript" src="scripts/top_img_paralax.js"></script>
 	<script type="text/javascript" src="scripts/switch_section.js"></script>
-	<script type="text/javascript" src="scripts/script_gameCard.js"></script>
+	<script type="text/javascript" src="scripts/app_game.js"></script>
 </body>
 </html>
