--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 		</div>
 		<div class="header__right">
 			<nav class="header__nav">
+				<div class="header__nav__region txt">
+					Ru
+					<span>Ваш регион</span>
+				</div>
 				<a href="profile.html" title="Профиль" type="button" class="header__nav__button">
 					<img src="img/icons/main/user64.png" alt="">
 				</a>
