--- a/profile.html
+++ b/profile.html
@@ -355,8 +355,16 @@
 				</section>
 				<section class="pNotification" id="profile_notification">
 					<div class="pNotification__header">
-						<div class="pNotification__header__title txt">Уведомления</div>
-						<div class="pNotification__header__counter txt"></div>
+						<div class="pNotification__header__top">
+							<div class="pNotification__header__title txt">Уведомления</div>
+							<div class="pNotification__header__counter txt"></div>	
+						</div>
+						<div class="pNotification__header__filter txt">
+							<div class="pNotification__header__filter__point">Транзакции</div>
+							<div class="pNotification__header__filter__point">Скидки</div>
+							<div class="pNotification__header__filter__point">Поступления</div>
+							<div class="pNotification__header__filter__point">Новые</div>
+						</div>
 					</div>
 					<div class="pNotification__grid" id="profile_notification_grid">
 
@@ -790,6 +798,6 @@
 	<script type="text/javascript" src="scripts/script.js"></script>
 	<script type="text/javascript" src="scripts/header_catalog.js"></script>
 	<script type="text/javascript" src="scripts/notification.js"></script>
-	<script type="text/javascript" src="scripts/profile.js"></script>
+	<script type="text/javascript" src="scripts/app_profile.js"></script>
 </body>
 </html>
