--- a/author.html
+++ b/author.html
@@ -306,7 +306,11 @@
             <section class="author__top">
                 <div class="author__top__head">
                     <div class="author__top__head__left">
-                        <div class="author__top__head__left__logo flex-center"><img src="https://avatars.fastly.steamstatic.com/7ba781b5f0b8a99d4cc0b0b0dcaa22df73db7db2_full.jpg" alt=""></div>
+                        <div class="author__top__head__left__logo flex-center">
+							<div class="author__top__head__left__logo__imgBlock">
+								<img src="https://static.gabestore.ru/category/MFRPev40n9ctX_iYhWb9HT0p6tsJ1bCa.png" alt="">
+							</div>
+						</div>
                         <div class="author__top__head__left__title txt">
                             <span>Издатель</span>
                             <h2>Ubisoft</h2>
