--- a/profile.html
+++ b/profile.html
@@ -364,6 +364,7 @@
 							<div class="pNotification__header__filter__point">Скидки</div>
 							<div class="pNotification__header__filter__point">Поступления</div>
 							<div class="pNotification__header__filter__point">Новые</div>
+							<div class="pNotification__header__filter__point">Все</div>
 						</div>
 					</div>
 					<div class="pNotification__grid" id="profile_notification_grid">
