--- a/author.html
+++ b/author.html
@@ -329,6 +329,14 @@
                         что для него важнее: его банда, которая его вырастила или же собственные идеалы.</p>
                 </div>
             </section>
+			<section class="author__series">
+				<div class="heading heading_title">
+					<h2 class="txt">Серии игр</h2>
+				</div>
+				<div class="griding_3InRow" id="grid_series">
+
+				</div>
+			</section>
             <section class="author__games" id="switch_section-author">
                 <div class="switch__head">
                     <div class="switch__head__point switch__head__point_active" data-title="all" id="switch_point-all" onclick="switch_section('all', 'author__games__grid_active')">
@@ -342,9 +350,9 @@
 						<div class="switch__head__point__text txt">Популярные</div>
 					</div>
                 </div>
-                <div class="author__games__grid switch__content author__games__grid_active" id="switch_content-all"></div>
-                <div class="author__games__grid switch__content" id="switch_content-new"></div>
-                <div class="author__games__grid switch__content" id="switch_content-pop"></div>
+                <div class="author__games__grid griding_3InRow switch__content author__games__grid_active" id="switch_content-all"></div>
+                <div class="author__games__grid griding_3InRow switch__content" id="switch_content-new"></div>
+                <div class="author__games__grid griding_3InRow switch__content" id="switch_content-pop"></div>
             </section>
         </div>
 	</main>
@@ -423,6 +431,6 @@
     <script type="text/javascript" src="scripts/header_catalog.js"></script>
     <script type="text/javascript" src="scripts/top_img_paralax.js"></script>
     <script type="text/javascript" src="scripts/notification.js"></script>
-	<script type="text/javascript" src="scripts/app_author.js"></script>
+	<script type="text/javascript" src="scripts/apps/app_author.js"></script>
 </body>
 </html>
