--- a/authors.html
+++ b/authors.html
@@ -413,6 +413,6 @@
 	<script type="text/javascript" src="scripts/header_catalog.js"></script>
 	<script type="text/javascript" src="scripts/notification.js"></script>
 	<script type="text/javascript" src="scripts/color-thief.min.js"></script>
-	<script type="text/javascript" src="scripts/script_authors.js"></script>
+	<script type="text/javascript" src="scripts/apps/app_authors.js"></script>
 </body>
 </html>
