--- a/game.html
+++ b/game.html
@@ -693,6 +693,6 @@
 	<script type="text/javascript" src="scripts/video_player.js"></script>
 	<script type="text/javascript" src="scripts/top_img_paralax.js"></script>
 	<script type="text/javascript" src="scripts/switch_section.js"></script>
-	<script type="text/javascript" src="scripts/app_game.js"></script>
+	<script type="text/javascript" src="scripts/apps/app_game.js"></script>
 </body>
 </html>
