--- a/profile.html
+++ b/profile.html
@@ -320,7 +320,16 @@
 										<span>ID:</span>#434667
 									</div>
 									<div class="profile__info__points__point txt">
-										<span>Регион:</span>RU
+										<span>Регион:</span>
+										RU
+										<button type="button" class="profile__info__points__point__button" title="Обновить регион">
+											<svg fill="#fff" width="20px" height="20px" viewBox="0 0 24 24" id="update-alt" data-name="Flat Line" xmlns="http://www.w3.org/2000/svg" class="icon flat-line">
+												<path id="primary" d="M5.07,8A8,8,0,0,1,20,12" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path>
+												<path id="primary-2" data-name="primary" d="M18.93,16A8,8,0,0,1,4,12" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path>
+												<polyline id="primary-3" data-name="primary" points="5 3 5 8 10 8" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></polyline>
+												<polyline id="primary-4" data-name="primary" points="19 21 19 16 14 16" style="fill: none; stroke: rgb(255, 255, 255); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></polyline>
+											</svg>
+										</button>
 									</div>
 									<div class="profile__info__points__point txt">
 										<span>На сайте с:</span>06.03.2022
@@ -360,11 +369,11 @@
 							<div class="pNotification__header__counter txt"></div>	
 						</div>
 						<div class="pNotification__header__filter txt">
+							<div class="pNotification__header__filter__point">Все</div>
+							<div class="pNotification__header__filter__point">Новые</div>
 							<div class="pNotification__header__filter__point">Транзакции</div>
 							<div class="pNotification__header__filter__point">Скидки</div>
 							<div class="pNotification__header__filter__point">Поступления</div>
-							<div class="pNotification__header__filter__point">Новые</div>
-							<div class="pNotification__header__filter__point">Все</div>
 						</div>
 					</div>
 					<div class="pNotification__grid" id="profile_notification_grid">
@@ -799,6 +808,6 @@
 	<script type="text/javascript" src="scripts/script.js"></script>
 	<script type="text/javascript" src="scripts/header_catalog.js"></script>
 	<script type="text/javascript" src="scripts/notification.js"></script>
-	<script type="text/javascript" src="scripts/app_profile.js"></script>
+	<script type="text/javascript" src="scripts/apps/app_profile.js"></script>
 </body>
 </html>
