--- a/series.html
+++ b/series.html
@@ -420,6 +420,6 @@
     <script type="text/javascript" src="scripts/header_catalog.js"></script>
     <script type="text/javascript" src="scripts/top_img_paralax.js"></script>
     <script type="text/javascript" src="scripts/notification.js"></script>
-	<script type="text/javascript" src="scripts/script_series.js"></script>
+	<script type="text/javascript" src="scripts/apps/app_series.js"></script>
 </body>
 </html>
