--- a/favorite.html
+++ b/favorite.html
@@ -824,6 +824,7 @@
 	<script type="text/javascript" src="elements/elements.js"></script>
 	<script type="text/javascript" src="scripts/makeContentFunctions.js"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
+    <script type="text/javascript" src="scripts/header.js"></script>
 	<script type="text/javascript" src="scripts/header_bg.js"></script>
 	<script type="text/javascript" src="scripts/header_catalog.js"></script>
     <script type="text/javascript" src="scripts/notification.js"></script>
