--- a/author.html
+++ b/author.html
@@ -426,6 +426,7 @@
 	<script type="text/javascript" src="elements/elements.js"></script>
 	<script type="text/javascript" src="scripts/makeContentFunctions.js"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
+	<script type="text/javascript" src="scripts/header.js"></script>
 	<script type="text/javascript" src="scripts/switch_section.js"></script>
     <script type="text/javascript" src="scripts/header_bg.js"></script>
     <script type="text/javascript" src="scripts/header_catalog.js"></script>
