--- a/catalog.html
+++ b/catalog.html
@@ -860,6 +860,7 @@
 	<script type="text/javascript" src="scripts/makeContentFunctions.js"></script>
 	<!-- <script type="text/javascript" src="scripts/carousel.js"></script> -->
 	<script type="text/javascript" src="scripts/script.js"></script>
+	<script type="text/javascript" src="scripts/header.js"></script>
 	<script type="text/javascript" src="scripts/header_bg.js"></script>
 	<!-- <script type="text/javascript" src="scripts/script_index.js"></script> -->
 	<script type="text/javascript" src="scripts/header_catalog.js"></script>
