--- a/catalog.html
+++ b/catalog.html
@@ -321,7 +321,7 @@
 						</div>
 						<div class="inputList__body">
 							<div class="inputList__body__search">
-								<input type="text" title="search_filter" class="txt" placeholder="Поиск" inp_type="search"></input>
+								<input type="text" title="search_filter" class="txt" placeholder="Поиск" inp_type="search" data-type="search"></input>
 							</div>
 							<div class="inputList__body__list">
 								<div class="inputList__body__list__point">
@@ -393,7 +393,7 @@
 						</div>
 						<div class="inputList__body">
 							<div class="inputList__body__search">
-								<input type="text" title="search_filter" class="txt" placeholder="Поиск" inp_type="search"></input>
+								<input type="text" title="search_filter" class="txt" placeholder="Поиск" inp_type="search" data-type="search"></input>
 							</div>
 							<div class="inputList__body__list">
 								<div class="inputList__body__list__point">
@@ -404,12 +404,27 @@
 								<div class="inputList__body__list__point">
 									<div class="inputList__body__list__point__click" data-value="value_2" data-title="point"></div>
 									<div class="inputList__body__list__point__mark"></div>
-									<div class="inputList__body__list__point__title">Поинт</div>
+									<div class="inputList__body__list__point__title">Зеленый</div>
 								</div>
 								<div class="inputList__body__list__point">
 									<div class="inputList__body__list__point__click" data-value="value_3" data-title="point"></div>
 									<div class="inputList__body__list__point__mark"></div>
-									<div class="inputList__body__list__point__title">Поинт</div>
+									<div class="inputList__body__list__point__title">Гринд</div>
+								</div>
+								<div class="inputList__body__list__point">
+									<div class="inputList__body__list__point__click" data-title="point"></div>
+									<div class="inputList__body__list__point__mark"></div>
+									<div class="inputList__body__list__point__title">Автобус</div>
+								</div>
+								<div class="inputList__body__list__point">
+									<div class="inputList__body__list__point__click" data-title="point"></div>
+									<div class="inputList__body__list__point__mark"></div>
+									<div class="inputList__body__list__point__title">Пицца</div>
+								</div>
+								<div class="inputList__body__list__point">
+									<div class="inputList__body__list__point__click" data-title="point"></div>
+									<div class="inputList__body__list__point__mark"></div>
+									<div class="inputList__body__list__point__title">Железо</div>
 								</div>
 								<div class="inputList__body__list__point">
 									<div class="inputList__body__list__point__click" data-title="point"></div>
@@ -431,20 +446,47 @@
 									<div class="inputList__body__list__point__mark"></div>
 									<div class="inputList__body__list__point__title">Поинт</div>
 								</div>
+							</div>
+						</div>
+					</div>
+					<div class="inputList inputList_interval txt" data-title="test3" data-type="interval" id="test3">
+						<!-- <input type="text" title="values" inp_type="value" value=""> -->
+						<div class="inputList__header">
+							<div class="inputList__header__click" data-title="header"></div>
+							<div class="inputList__header__left">
+								<div class="inputList__header__left__title">Цена</div>
+								<div class="inputList__header__left__value"></div>
+							</div>
+							<div class="inputList__header__icon">
+								<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="#fff"/>
+								</svg>
+							</div>
+						</div>
+						<div class="inputList__body">
+							<div class="inputList__body__interval">
+								<div class="inputList__body__interval__values">
+									<input class="txt" inp_type="min_interval" type="number" placeholder="Мин">
+									<span></span>
+									<input class="txt" inp_type="max_interval" type="number" placeholder="Макс">
+								</div>
+								<button type="button" class="inputList__body__interval__button txt" data-type="interval">Применить</button>
+							</div>
+							<div class="inputList__body__list">
 								<div class="inputList__body__list__point">
-									<div class="inputList__body__list__point__click" data-title="point"></div>
+									<div class="inputList__body__list__point__click" data-value="0-100" data-title="point"></div>
 									<div class="inputList__body__list__point__mark"></div>
-									<div class="inputList__body__list__point__title">Поинт</div>
+									<div class="inputList__body__list__point__title">0-100</div>
 								</div>
 								<div class="inputList__body__list__point">
-									<div class="inputList__body__list__point__click" data-title="point"></div>
+									<div class="inputList__body__list__point__click" data-value="100-500" data-title="point"></div>
 									<div class="inputList__body__list__point__mark"></div>
-									<div class="inputList__body__list__point__title">Поинт</div>
+									<div class="inputList__body__list__point__title">100-500</div>
 								</div>
 								<div class="inputList__body__list__point">
-									<div class="inputList__body__list__point__click" data-title="point"></div>
+									<div class="inputList__body__list__point__click" data-value="500-1000" data-title="point"></div>
 									<div class="inputList__body__list__point__mark"></div>
-									<div class="inputList__body__list__point__title">Поинт</div>
+									<div class="inputList__body__list__point__title">500-1000</div>
 								</div>
 							</div>
 						</div>
